--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,7 +1,7 @@
-twisted>=15.0.0
-avro>=1.6.3
-python-dateutil>=2.0
-configobj>=4.7.0
-pyOpenSSL>=0.14
-ply
-autobahn>=0.8
+twisted==19.10.0
+avro==1.8.1
+python-dateutil==2.6.0
+configobj==5.0.6
+pyOpenSSL==16.2.0
+ply==3.11
+autobahn==19.11.1
