--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,7 +1,9 @@
+
 twisted==19.10.0
 avro==1.8.1
 python-dateutil==2.6.0
 configobj==5.0.6
 pyOpenSSL==16.2.0
 ply==3.11
+txaio==18.8.1
 autobahn==19.11.1
